fixed nav jumping@

--- a/web/src/doc.css
+++ b/web/src/doc.css
@@ -1,28 +1,38 @@
 #content-holder {
-  max-width: 1300px;
-  margin: auto;
   display: grid;
-  grid-template-columns: 1fr 85ch 1fr;
+  grid-template-columns: 1fr 70ch 1fr;
+  grid-template-rows: 6rem max-content max-content;
   position: relative;
 }
 
-#content-holder>nav {
+nav {
   overflow-y: scroll;
   position: sticky;
   height: calc(100vh - 6rem);
-  overscroll-behavior: containe;
+  overscroll-behavior: contain;
   padding-bottom: 2em;
   padding-top: 1em;
   top: 6rem;
   scrollbar-gutter: stable;
+  opacity: 50%;
+}
+
+header {
+  grid-row: 1;
+  grid-column: 1 / span 3;
 }
 
 #docs-nav {
+  grid-row: 2;
+  grid-column: 1;
   padding-right: 2em;
   justify-self: end;
 }
 
-#content-nav {}
+#content-nav {
+  grid-row: 2;
+  grid-column: 3;
+}
 
 #content-nav ul {
   margin: 0;
@@ -31,10 +41,18 @@
 }
 
 #content {
+  grid-row: 2;
+  grid-column: 2;
   padding-top: 1em;
   z-index: 5;
 }
 
 #content code {
   font-family: monospace;
+}
+
+footer {
+  grid-row: 3;
+  grid-column: 1 / span 3;
+  padding: 5rem;
 }
